# mobile-rn

./: package.json  tsconfig.json
__tests__/: App-test.js
android/app/: google-services.json
ios/mobile/: AppDelegate.m  Info.plist
ios/mobile.xcodeproj/: project.pbxproj
mobile/: .gitignore  .prettierrc.js  codegen.yml  output.txt  package.json  tee
mobile/__mocks__/: mockFirebase.js
mobile/android/: build.gradle
mobile/android/app/src/main/cpp/: CMakeLists.txt  estimate_hr.cpp  estimate_hr.h  fir_filter.h  kernels.cpp  native-lib.cpp  native-lib.h
mobile/ios/: Podfile  blefile.swift
mobile/src/: App.tsx  App2.tsx  App3.tsx  LoginForm.tsx  colors.ts  ecg-storage.ts  logging.ts  mock.ts
src/: App.js  App.tsx  colors.d.ts  colors.js  ecg-storage.d.ts  ecg-storage.js  log-events.d.ts  log-events.js  log-events.ts  logging.d.ts  logging.js
src/api/: hoc.d.ts  hoc.js  index.js  patch.d.ts  patch.js  patch.ts
src/ble/: BleContainer.d.ts  BleContainer.js  BleContainer.tsx  BleContainer2.d.ts  BleContainer2.js  BleIndicator.d.ts  BleIndicator.js  HeartbeatIndicator.d.ts  HeartbeatIndicator.js  argos-ble.d.ts  argos-ble.js  argos-ble.ts  service.d.ts  service.js  service.ts
src/components/: AppHeader.d.ts  AppHeader.js  AppHeader.tsx  BLE.d.ts  BLE.js  BLE.tsx  BatteryCard.d.ts  BatteryCard.js  Chart.d.ts  Chart.js  ChartCard.d.ts  ChartCard.js  DeveloperCard.d.ts  DeveloperCard.js  DoctorScreen.d.ts  DoctorScreen.js  FirstSessionScreen.d.ts  FirstSessionScreen.js  Footer.d.ts  Footer.js  Heartbeat.d.ts  Heartbeat.js  Hello.d.ts  Hello.js  Hello.tsx  (+27 more)
(+126 files in other folders)
